# kvwarden

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  SECURITY.md  pyproject.toml  requirements-gpu.txt  research_roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
benchmarks/configs/: gate05_mock.yaml  multi_model_scenario.yaml  sharegpt_baseline.yaml
benchmarks/scripts/: benchmark_admission.py  benchmark_chat_rag_burst.py  benchmark_multi_model.py  benchmark_n_tenant_single_model.py  benchmark_two_tenant_single_model.py  mock_engine.py  repro_gate0_stall.sh  run_baseline_comparison.py  smoke_bench.sh  test_real_ttft.py
configs/: gate0_multi_model.yaml  gate1_admission.yaml  gate1_admission_off.yaml  gate21b_fifo_n8.yaml  gate21b_tokenbucket_n8.yaml  gate23_fairness_70b_tp4.yaml  gate2_fairness_drr.yaml  gate2_fairness_drr_cap16.yaml  gate2_fairness_drr_ratelimit.yaml  gate2_fairness_fifo.yaml  gate2_fairness_token_bucket_n6.yaml  gate2_multi_tenant.yaml  gate2_round_robin.yaml  gate3_kv_eviction.yaml  quickstart_fairness.yaml
dashboards/: kvwarden-fairness.json
docker/: Dockerfile  docker-compose.yml  quickstart-compose.yaml
docs/: demo_script.md  gap_analysis_verification_april2026.md  inference_orchestration_gaps_report.md  metrics_audit_20260421.md  phase1_findings.md  phase_b_roadmap.md  pitch.md  reproduce_hero.md  strategic_analysis.md  tuning_guide.md
docs/grafana/: kvwarden-overview.json
docs/launch/: cold_outreach_template.md  demo_video_script.md  faq.md  frontier_coverage.md  gate0_launch_post.md  gate1_runbook.md  gate2_design.md  gate2_fairness_runbook.md  one_pager.md  pypi_reservation.md  show_hn.md  twitter_thread.md  why_not_upstream.md
docs/naming/: email_samuel_bell.md  infergrid_name_audit.md  rename_plan.md  rename_sequence.md  user_checklist.md
docs/ops/: discovery-notes.md  installs.csv  onboarding_playbook.md  weekly-retros.md
docs/privacy/: telemetry.md
docs/rfcs/: T2-cache-pressure-admission.md  T2-tenant-aware-eviction.md
docs/runbooks/: gate3_kv_eviction.md  secrets.md  token_rotation_20260421.md
profiling/analysis/: scheduling_overhead_analysis.ipynb
profiling/scripts/: profile_sglang_scheduler.py  profile_vllm_scheduler.py  profiling_utils.py
results/: CORRECTIONS.md
results/gate06_20260419/: GATE06_OUTCOME.md  gate0_multi_model.yaml  git_head.txt  gpu_trace.csv  nvidia_smi_final.txt  pip_freeze.txt  prometheus_dump.txt  smoke.jsonl  status_after.json  status_before.json
results/gate06_20260419/benchmarks/: alternating_c1.csv  alternating_c1_gpu.csv  alternating_c1_summary.json  alternating_c32.csv  (+7 more)
results/gate1_20260419/: GATE1_OUTCOME.md
results/gate1_5_20260419/: GATE1_5_OUTCOME.md
results/gate21_n8_20260421/: GATE21_N8_OUTCOME.md
results/gate21_n8_TBD/: GATE21_N8_OUTCOME.md
results/gate22_mixed_20260421/: GATE22_MIXED_OUTCOME.md
results/gate22_mixed_TBD/: GATE22_MIXED_OUTCOME.md
results/gate23_70b_tp4_20260421/: GATE23_70B_TP4_OUTCOME.md
results/gate23_70b_tp4_TBD/: GATE23_70B_TP4_OUTCOME.md
results/gate24_mixtral_20260421/: GATE24_MIXTRAL_OUTCOME.md
results/gate24_mixtral_TBD/: GATE24_MIXTRAL_OUTCOME.md
results/gate2_fairness_20260419/: GATE2_FAIRNESS_OUTCOME.md  GATE2_FAIRNESS_SUPPLEMENT_arm6.md
results/gate2_n6_v3/: GATE2_N6_OUTCOME.md
results/gate3_TBD/: OUTCOME.md
results/h100_adversarial_sweep_20260421/: DONE  OUTCOME.md  git_head.txt  gpu_info.txt  pip_relevant.txt  post_warmup_summary.json  runner.sh  summarize_sweep.py
results/m4_path_c_probe_20260502/: OUTCOME.md  cell_results.json  post_warmup_summary.json
results/results_llama31-8b_20260416_120938/: summary.md
scripts/: cloud_benchmark.sh  cost_cap_smoke.sh  gate1_dress_rehearsal.sh  gate2_fairness_dress_rehearsal.sh  gate_pod_bootstrap.sh  generate_charts.py  generate_launch_chart.py  generate_launch_chart_v3.py  gpu_monitor.py  m4_path_c_orchestrator.py  m4_summarize.py  provision_runpod.py  publish_kvwarden_stub.sh  run_all_baselines.sh  run_multi_model_demo.sh  setup_gpu_env.sh  setup_venv.sh  summarize_results.py  track_d_runner.sh
src/infergrid/: __init__.py  cli.py
src/kvwarden/: __init__.py  _manpages.py  _telemetry.py  cli.py
telemetry-worker/: README.md  schema.sql  wrangler.toml
telemetry-worker/src/: index.ts
tests/integration/: test_benchmark_client.py  test_cache_pressure_admission_hot_path.py
tests/unit/: test_admission.py  test_bench_harness_flags.py  test_bench_hero.py  test_cache_manager.py  test_cache_pressure_admission.py  test_metrics.py  test_metrics_ttft.py  test_multi_model.py  test_profiling_utils.py  test_router.py  test_router_ensure_model_loaded_race.py  test_router_health_gating.py  test_telemetry.py  test_tenant_manager.py  test_tenant_policy.py  test_tenant_priority.py  test_tenant_token_bucket.py
(+470 files in other folders)
