[project]
name = "kvwarden"
version = "0.1.2"
description = "Tenant-fair LLM inference orchestration on a single GPU. No Kubernetes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Shrey Patel", email = "patelshrey77@gmail.com"}]
keywords = ["llm", "inference", "vllm", "sglang", "multi-tenant", "gpu", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24,<2.3",
    "pandas~=2.0",
    "pyyaml>=6.0",
    "prometheus-client~=0.19",
    "httpx~=0.25",
    "aiohttp~=3.9",
    "rich>=13.0,<16.0",
]

[project.urls]
Homepage = "https://github.com/coconut-labs/kvwarden"
Documentation = "https://github.com/coconut-labs/kvwarden#readme"
Repository = "https://github.com/coconut-labs/kvwarden"
Issues = "https://github.com/coconut-labs/kvwarden/issues"

[project.optional-dependencies]
dev = [
    "pytest~=7.0",
    "pytest-asyncio~=0.21",
    "pytest-aiohttp~=1.0",
    "black~=23.0",
    "ruff~=0.1",
    "mypy~=1.0",
    "yappi~=1.4",
]
profiling = [
    "py-spy~=0.3",
    "nvidia-ml-py~=12.0",
    "matplotlib~=3.7",
    "seaborn~=0.12",
    "datasets~=2.14",
    "jupyter~=1.0",
    "ipykernel~=6.25",
    "transformers>=4.51.1,<5.0",
]
vllm = ["vllm==0.19.1", "numpy>=1.24"]
sglang = ["sglang~=0.3.0"]

[project.scripts]
kvwarden = "kvwarden.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # line-too-long: accepted debt; fix opportunistically, not in lint gate
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
